README.md: VM options to speed up pddl4j