@@ -15,10 +15,19 @@ mvn install:install-file \
 Work with maven: mvn clean, mvn compile, mvn test, mvn package
 
 Run with: 
+````
+java --add-opens java.base/java.lang=ALL-UNNAMED \
+      -server -Xms2048m -Xmx2048m \
+      -cp "$(mvn dependency:build-classpath -Dmdep.outputFile=/dev/stdout -q):target/test-classes/:target/classes" \
+      sokoban.SokobanMain
+````
+or (after mvn package)
 ```
 java --add-opens java.base/java.lang=ALL-UNNAMED \
+      -server -Xms2048m -Xmx2048m \
       -cp target/sokoban-1.0-SNAPSHOT-jar-with-dependencies.jar \
       sokoban.SokobanMain
 ```
+Sorry ```mvn exec:java``` has still an open issue ("Directory src/main/resources/view/assets not found.")
 
 See solution at http://localhost:8888/test.html
